[package]
name = "pure_dsa"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = { version = "0.8", features = ["std", "getrandom"] }
rand_core = "0.6"
zeroize = { version = "1.8.1", optional = true, features = ["zeroize_derive"]}
getrandom = { version = "0.2.10", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sign_bench"
harness = false

[lib]
name = "pure_dsa"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default= ["zeroize", "random"]
random = []
no_std = [] 
zeroize = ["dep:zeroize"]
wasm = ["wasm-bindgen", "getrandom/js"]