[package]
name = "pure_dsa"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand = { version = "0.8", features = ["std", "getrandom"] }
rand_core = "0.6"
zeroize = { version = "1.8.1", optional = true, features = ["zeroize_derive"]}

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "sign_bench"
harness = false

[lib]
name = "pure_dsa"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default= ["zeroize", "random"]
random = []
no_std = [] 
zeroize = ["dep:zeroize"]
